--- a/web/app/views/components/collection/events/_collection.html.erb
+++ b/web/app/views/components/collection/events/_collection.html.erb
@@ -23,7 +23,8 @@
 			display_load_more: false,
 			if_greater_than:   0,
 			display_if_empty:  false,
-			show_similar_to:   []
+			show_similar_to:   [],
+			total_count:       0
 	}.deep_merge!(collection)
 
 %>
@@ -34,6 +35,7 @@
 				 data-target="section.section"
 				 data-section-load-more-loading="false"
 				 data-section-limit="<%= collection[:events].size %>"
+				 data-section-total-count="<%= collection[:total_count] %>"
 				 data-section-infinite-scroll="<%= collection[:infinite_scroll] %>"
 				 data-section-disposition="<%= collection[:disposition] %>"
 				 data-section-identifier="<%= collection[:identifier] %>"
@@ -127,7 +129,7 @@
 											 show_similar_to: session[:show_similar_to]
 									 },
 									 cached:     false) %>
-				<% if collection[:infinite_scroll] || collection[:display_load_more] %>
+				<% if (collection[:infinite_scroll] || collection[:display_load_more]) && collection[:total_count] > collection[:events].size %>
 					<div data-action="click->section#loadMoreHere"
 							 data-target="section.loadMoreButton"
 							 data-continue-to-path="<%= collection[:continue_to] %>"
@@ -146,7 +148,7 @@
 				<% end %>
 			<% else %>
 				<% 4.times do %>
-					<div class="mdc-layout-grid__cell" id="cell-follow-544-event_6238" style="order: 1;">
+					<div class="mdc-layout-grid__cell" id="<%= "empty-events-#{rand 1000}" %>" style="order: 1;">
 						<div class="me-card me-card--feed me-card--empty mdc-card mdc-card--outlined" id="event_6238">
 							<div class="me-card__primary-section">
 								<div class="me-card__date is-hoverable" data-target="event.date">
@@ -205,7 +207,7 @@
 								 },
 								 cached:  false %>
 		<% end %>
-		<% if collection[:infinite_scroll] || collection[:display_load_more] %>
+		<% if (collection[:infinite_scroll] || collection[:display_load_more]) && collection[:total_count] > collection[:events].size %>
 			<div class="me-collection__load-more me-collection__load-more--vertical is-hoverable"
 					 data-action="click->section#loadMoreHere"
 					 data-target="section.loadMoreButton">
