--- a/web/app/views/events/show.html.erb
+++ b/web/app/views/events/show.html.erb
@@ -59,6 +59,8 @@
 
 
 
+
+
 </script>
 
 <script type="application/ld+json">
@@ -103,7 +105,7 @@
 
 </script>
 
-<%= render Modal::SignInComponent.new( text: nil) %>
+<%= render Modal::SignInComponent.new(text: nil) %>
 
 <section id="page" class="max-w-screen-lg grid-cols-12 pb-10 md:grid md:gap-10 md:mt-10 md:mx-auto">
 	<div class="md:col-span-8">
@@ -111,12 +113,21 @@
 	</div>
 	<div class="md:col-span-4 mb-10 md:mb-0 mt-5 md:mt-0">
 		<div class="bg-gray-200 cursor-pointer flex font-bold hidden items-center md:block bottom-auto mb-5 relative rounded-xl w-auto p-3 space-y-2 text-gray-600 text-sm">
-			<a href="<%= @event.details_source_url %>" target="_blank" class="select-none transition-colors bg-white flex flex-1 group hover:bg-green-500 hover:text-white items-center justify-center py-3 rounded shadow-sm space-x-2 cursor-pointer">
+			<a href="<%= @event.details_source_url %>" target="_blank" rel="nofollow" class="select-none transition-colors bg-white flex flex-1 group hover:bg-green-500 hover:text-white items-center justify-center py-3 rounded shadow-sm space-x-2 cursor-pointer">
 				<div>Abrir no facebook</div>
 				<svg class="group-hover:text-white transition-colors h-4 text-gray-400 fill-current" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
 					<path d="M16 16H2V2H9V0H2C0.89 0 0 0.9 0 2V16C0 17.1 0.89 18 2 18H16C17.1 18 18 17.1 18 16V9H16V16ZM11 0V2H14.59L4.76 11.83L6.17 13.24L16 3.41V7H18V0H11Z"/>
 				</svg>
 			</a>
+			<% if @event&.details_ticket_url %>
+				<a href="<%= @event.details_ticket_url %>" target="_blank" rel="nofollow" class="select-none transition-colors bg-white flex flex-1 group hover:bg-green-500 hover:text-white items-center justify-center py-3 rounded shadow-sm space-x-2 cursor-pointer">
+					<div>Comprar ingressos</div>
+					<svg class="fill-current group-hover:text-white h-6 text-gray-400 transition-colors" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<path d="M0 0h24v24H0V0z" fill="none"/>
+						<path d="M22 10V6c0-1.1-.9-2-2-2H4c-1.1 0-1.99.9-1.99 2v4c1.1 0 1.99.9 1.99 2s-.89 2-2 2v4c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2v-4c-1.1 0-2-.9-2-2s.9-2 2-2zm-2-1.46c-1.19.69-2 1.99-2 3.46s.81 2.77 2 3.46V18H4v-2.54c1.19-.69 2-1.99 2-3.46 0-1.48-.8-2.77-1.99-3.46L4 6h16v2.54zM9.07 16L12 14.12 14.93 16l-.89-3.36 2.69-2.2-3.47-.21L12 7l-1.27 3.22-3.47.21 2.69 2.2z"/>
+					</svg>
+				</a>
+			<% end %>
 			<div class="select-none transition-colors overflow-hidden relative bg-white flex flex-1 group hover:bg-green-500 hover:text-white items-center justify-center py-3 rounded shadow-sm space-x-2 cursor-pointer"
 					 data-controller="share-button"
 					 data-share-button-text="<%= strip_tags(limit_description_size(@event.details_description, 160)) %>"
@@ -177,7 +188,7 @@
 	</div>
 
 	<div class="select-none tap-highlight-none fixed bottom-0 flex items-center w-screen px-3 py-2 space-x-2 text-sm font-medium text-gray-500 cursor-pointer md:hidden bg-gray-300">
-		<a href="<%= @event.details_source_url %>" target="_blank" class="select-none flex items-center justify-center flex-1 py-3 space-x-2 bg-white rounded shadow-sm">
+		<a href="<%= @event.details_source_url %>" target="_blank" rel="nofollow" class="select-none flex items-center justify-center flex-1 py-3 space-x-2 bg-white rounded shadow-sm">
 			<div>Abrir no facebook</div>
 			<svg class="h-4 text-gray-400 fill-current" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
 				<path d="M16 16H2V2H9V0H2C0.89 0 0 0.9 0 2V16C0 17.1 0.89 18 2 18H16C17.1 18 18 17.1 18 16V9H16V16ZM11 0V2H14.59L4.76 11.83L6.17 13.24L16 3.41V7H18V0H11Z"/>
