--- a/web/app/assets/images/manifest.json.erb
+++ b/web/app/assets/images/manifest.json.erb
@@ -5,7 +5,7 @@
 	"display": "standalone",
 	"orientation": "portrait",
 	"theme_color": "#6b7280",
-	"background_color": "#ffffff",
+	"background_color": "#6369D1",
 	"scope": "/",
 	"start_url": "/?pwa=true&utm_source=pwa",
 	"lang": "pt-BR",
@@ -15,39 +15,372 @@
 	],
 	"icons": [
 		{
-			"src": "<%= image_url 'icons/launcher-icon-36x36.png' %>",
-			"sizes": "36x36",
-			"type": "image/png"
+			"src": "<%= image_url 'windows10/Square71x71Logo.scale-400.png' %>",
+			"sizes": "284x284"
 		},
 		{
-			"src": "<%= image_url 'icons/launcher-icon-48x48.png' %>",
-			"sizes": "48x48",
-			"type": "image/png"
+			"src": "<%= image_url 'windows10/Square71x71Logo.scale-200.png' %>",
+			"sizes": "142x142"
 		},
 		{
-			"src": "<%= image_url 'icons/launcher-icon-72x72.png' %>",
-			"sizes": "72x72",
-			"type": "image/png"
+			"src": "<%= image_url 'windows10/Square71x71Logo.scale-100.png' %>",
+			"sizes": "71x71"
 		},
 		{
-			"src": "<%= image_url 'icons/launcher-icon-96x96.png' %>",
-			"sizes": "96x96",
-			"type": "image/png"
+			"src": "<%= image_url 'windows10/Square71x71Logo.scale-150.png' %>",
+			"sizes": "107x107"
 		},
 		{
-			"src": "<%= image_url 'icons/launcher-icon-144x144.png' %>",
-			"sizes": "144x144",
-			"type": "image/png"
+			"src": "<%= image_url 'windows10/Square71x71Logo.scale-125.png' %>",
+			"sizes": "89x89"
 		},
 		{
-			"src": "<%= image_url 'icons/launcher-icon-192x192.png' %>",
-			"sizes": "192x192",
-			"type": "image/png"
+			"src": "<%= image_url 'windows10/Square150x150Logo.scale-400.png' %>",
+			"sizes": "600x600"
 		},
 		{
-			"src": "<%= image_url 'icons/launcher-icon-512x512.png' %>",
-			"sizes": "512x512",
-			"type": "image/png"
+			"src": "<%= image_url 'windows10/Square150x150Logo.scale-200.png' %>",
+			"sizes": "300x300"
+		},
+		{
+			"src": "<%= image_url 'windows10/Square150x150Logo.scale-100.png' %>",
+			"sizes": "150x150"
+		},
+		{
+			"src": "<%= image_url 'windows10/Square150x150Logo.scale-150.png' %>",
+			"sizes": "225x225"
+		},
+		{
+			"src": "<%= image_url 'windows10/Square150x150Logo.scale-125.png' %>",
+			"sizes": "188x188"
+		},
+		{
+			"src": "<%= image_url 'windows10/Wide310x150Logo.scale-400.png' %>",
+			"sizes": "1240x600"
+		},
+		{
+			"src": "<%= image_url 'windows10/Wide310x150Logo.scale-200.png' %>",
+			"sizes": "620x300"
+		},
+		{
+			"src": "<%= image_url 'windows10/Wide310x150Logo.scale-100.png' %>",
+			"sizes": "310x150"
+		},
+		{
+			"src": "<%= image_url 'windows10/Wide310x150Logo.scale-150.png' %>",
+			"sizes": "465x225"
+		},
+		{
+			"src": "<%= image_url 'windows10/Wide310x150Logo.scale-125.png' %>",
+			"sizes": "388x188"
+		},
+		{
+			"src": "<%= image_url 'windows10/Square310x310Logo.scale-400.png' %>",
+			"sizes": "1240x1240"
+		},
+		{
+			"src": "<%= image_url 'windows10/Square310x310Logo.scale-200.png' %>",
+			"sizes": "620x620"
+		},
+		{
+			"src": "<%= image_url 'windows10/Square310x310Logo.scale-100.png' %>",
+			"sizes": "310x310"
+		},
+		{
+			"src": "<%= image_url 'windows10/Square310x310Logo.scale-150.png' %>",
+			"sizes": "465x465"
+		},
+		{
+			"src": "<%= image_url 'windows10/Square310x310Logo.scale-125.png' %>",
+			"sizes": "388x388"
+		},
+		{
+			"src": "<%= image_url 'windows10/Square44x44Logo.scale-400.png' %>",
+			"sizes": "176x176"
+		},
+		{
+			"src": "<%= image_url 'windows10/Square44x44Logo.scale-200.png' %>",
+			"sizes": "88x88"
+		},
+		{
+			"src": "<%= image_url 'windows10/Square44x44Logo.scale-100.png' %>",
+			"sizes": "44x44"
+		},
+		{
+			"src": "<%= image_url 'windows10/Square44x44Logo.scale-150.png' %>",
+			"sizes": "66x66"
+		},
+		{
+			"src": "<%= image_url 'windows10/Square44x44Logo.scale-125.png' %>",
+			"sizes": "55x55"
+		},
+		{
+			"src": "<%= image_url 'windows10/Square44x44Logo.targetsize-256.png' %>",
+			"sizes": "256x256"
+		},
+		{
+			"src": "<%= image_url 'windows10/Square44x44Logo.targetsize-48.png' %>",
+			"sizes": "48x48"
+		},
+		{
+			"src": "<%= image_url 'windows10/Square44x44Logo.targetsize-32.png' %>",
+			"sizes": "32x32"
+		},
+		{
+			"src": "<%= image_url 'windows10/Square44x44Logo.targetsize-24.png' %>",
+			"sizes": "24x24"
+		},
+		{
+			"src": "<%= image_url 'windows10/Square44x44Logo.targetsize-16.png' %>",
+			"sizes": "16x16"
+		},
+		{
+			"src": "<%= image_url 'windows10/Square44x44Logo.targetsize-256_altform-unplated.png' %>",
+			"sizes": "256x256"
+		},
+		{
+			"src": "<%= image_url 'windows10/Square44x44Logo.targetsize-48_altform-unplated.png' %>",
+			"sizes": "48x48"
+		},
+		{
+			"src": "<%= image_url 'windows10/Square44x44Logo.targetsize-32_altform-unplated.png' %>",
+			"sizes": "32x32"
+		},
+		{
+			"src": "<%= image_url 'windows10/Square44x44Logo.targetsize-24_altform-unplated.png' %>",
+			"sizes": "24x24"
+		},
+		{
+			"src": "<%= image_url 'windows10/Square44x44Logo.targetsize-16_altform-unplated.png' %>",
+			"sizes": "16x16"
+		},
+		{
+			"src": "<%= image_url 'windows10/StoreLogo.scale-400.png' %>",
+			"sizes": "200x200"
+		},
+		{
+			"src": "<%= image_url 'windows10/StoreLogo.scale-200.png' %>",
+			"sizes": "100x100"
+		},
+		{
+			"src": "<%= image_url 'windows10/StoreLogo.scale-150.png' %>",
+			"sizes": "75x75"
+		},
+		{
+			"src": "<%= image_url 'windows10/StoreLogo.scale-125.png' %>",
+			"sizes": "63x63"
+		},
+		{
+			"src": "<%= image_url 'windows10/StoreLogo.scale-100.png' %>",
+			"sizes": "50x50"
+		},
+		{
+			"src": "<%= image_url 'windows10/StoreLogo.png' %>",
+			"sizes": "50x50"
+		},
+		{
+			"src": "<%= image_url 'windows10/SplashScreen.scale-400.png' %>",
+			"sizes": "2480x1200"
+		},
+		{
+			"src": "<%= image_url 'windows10/SplashScreen.scale-200.png' %>",
+			"sizes": "1240x600"
+		},
+		{
+			"src": "<%= image_url 'windows10/SplashScreen.scale-150.png' %>",
+			"sizes": "930x450"
+		},
+		{
+			"src": "<%= image_url 'windows10/SplashScreen.scale-125.png' %>",
+			"sizes": "775x375"
+		},
+		{
+			"src": "<%= image_url 'windows10/SplashScreen.scale-100.png' %>",
+			"sizes": "620x300"
+		},
+		{
+			"src": "<%= image_url 'windows/windows-smallsquare-24-24.png' %>",
+			"sizes": "24x24"
+		},
+		{
+			"src": "<%= image_url 'windows/windows-smallsquare-30-30.png' %>",
+			"sizes": "30x30"
+		},
+		{
+			"src": "<%= image_url 'windows/windows-smallsquare-42-42.png' %>",
+			"sizes": "42x42"
+		},
+		{
+			"src": "<%= image_url 'windows/windows-smallsquare-54-54.png' %>",
+			"sizes": "54x54"
+		},
+		{
+			"src": "<%= image_url 'windows/windows-splashscreen-1116-540.png' %>",
+			"sizes": "1116x540"
+		},
+		{
+			"src": "<%= image_url 'windows/windows-splashscreen-868-420.png' %>",
+			"sizes": "868x420"
+		},
+		{
+			"src": "<%= image_url 'windows/windows-splashscreen-620-300.png' %>",
+			"sizes": "620x300"
+		},
+		{
+			"src": "<%= image_url 'windows/windows-squarelogo-270-270.png' %>",
+			"sizes": "270x270"
+		},
+		{
+			"src": "<%= image_url 'windows/windows-squarelogo-210-210.png' %>",
+			"sizes": "210x210"
+		},
+		{
+			"src": "<%= image_url 'windows/windows-squarelogo-150-150.png' %>",
+			"sizes": "150x150"
+		},
+		{
+			"src": "<%= image_url 'windows/windows-squarelogo-120-120.png' %>",
+			"sizes": "120x120"
+		},
+		{
+			"src": "<%= image_url 'windows/windows-storelogo-90-90.png' %>",
+			"sizes": "90x90"
+		},
+		{
+			"src": "<%= image_url 'windows/windows-storelogo-70-70.png' %>",
+			"sizes": "70x70"
+		},
+		{
+			"src": "<%= image_url 'windows/windows-storelogo-50-50.png' %>",
+			"sizes": "50x50"
+		},
+		{
+			"src": "<%= image_url 'windows/windowsphone-appicon-106-106.png' %>",
+			"sizes": "106x106"
+		},
+		{
+			"src": "<%= image_url 'windows/windowsphone-appicon-62-62.png' %>",
+			"sizes": "62x62"
+		},
+		{
+			"src": "<%= image_url 'windows/windowsphone-appicon-44-44.png' %>",
+			"sizes": "44x44"
+		},
+		{
+			"src": "<%= image_url 'windows/windowsphone-mediumtile-360-360.png' %>",
+			"sizes": "360x360"
+		},
+		{
+			"src": "<%= image_url 'windows/windowsphone-mediumtile-210-210.png' %>",
+			"sizes": "210x210"
+		},
+		{
+			"src": "<%= image_url 'windows/windowsphone-mediumtile-150-150.png' %>",
+			"sizes": "150x150"
+		},
+		{
+			"src": "<%= image_url 'windows/windowsphone-smalltile-170-170.png' %>",
+			"sizes": "170x170"
+		},
+		{
+			"src": "<%= image_url 'windows/windowsphone-smalltile-99-99.png' %>",
+			"sizes": "99x99"
+		},
+		{
+			"src": "<%= image_url 'windows/windowsphone-smalltile-71-71.png' %>",
+			"sizes": "71x71"
+		},
+		{
+			"src": "<%= image_url 'windows/windowsphone-storelogo-120-120.png' %>",
+			"sizes": "120x120"
+		},
+		{
+			"src": "<%= image_url 'windows/windowsphone-storelogo-70-70.png' %>",
+			"sizes": "70x70"
+		},
+		{
+			"src": "<%= image_url 'windows/windowsphone-storelogo-50-50.png' %>",
+			"sizes": "50x50"
+		},
+		{
+			"src": "<%= image_url 'msteams/msteams-192-192.png' %>",
+			"sizes": "192x192"
+		},
+		{
+			"src": "<%= image_url 'msteams/msteams-silhouette-32-32.png' %>",
+			"sizes": "32x32"
+		},
+		{
+			"src": "<%= image_url 'android/android-launchericon-512-512.png' %>",
+			"sizes": "512x512"
+		},
+		{
+			"src": "<%= image_url 'android/android-launchericon-192-192.png' %>",
+			"sizes": "192x192"
+		},
+		{
+			"src": "<%= image_url 'android/android-launchericon-144-144.png' %>",
+			"sizes": "144x144"
+		},
+		{
+			"src": "<%= image_url 'android/android-launchericon-96-96.png' %>",
+			"sizes": "96x96"
+		},
+		{
+			"src": "<%= image_url 'android/android-launchericon-72-72.png' %>",
+			"sizes": "72x72"
+		},
+		{
+			"src": "<%= image_url 'android/android-launchericon-48-48.png' %>",
+			"sizes": "48x48"
+		},
+		{
+			"src": "<%= image_url 'chrome/chrome-extensionmanagementpage-48-48.png' %>",
+			"sizes": "48x48"
+		},
+		{
+			"src": "<%= image_url 'chrome/chrome-favicon-16-16.png' %>",
+			"sizes": "16x16"
+		},
+		{
+			"src": "<%= image_url 'chrome/chrome-installprocess-128-128.png' %>",
+			"sizes": "128x128"
+		},
+		{
+			"src": "<%= image_url 'firefox/firefox-marketplace-512-512.png' %>",
+			"sizes": "512x512"
+		},
+		{
+			"src": "<%= image_url 'firefox/firefox-marketplace-128-128.png' %>",
+			"sizes": "128x128"
+		},
+		{
+			"src": "<%= image_url 'firefox/firefox-general-256-256.png' %>",
+			"sizes": "256x256"
+		},
+		{
+			"src": "<%= image_url 'firefox/firefox-general-128-128.png' %>",
+			"sizes": "128x128"
+		},
+		{
+			"src": "<%= image_url 'firefox/firefox-general-90-90.png' %>",
+			"sizes": "90x90"
+		},
+		{
+			"src": "<%= image_url 'firefox/firefox-general-64-64.png' %>",
+			"sizes": "64x64"
+		},
+		{
+			"src": "<%= image_url 'firefox/firefox-general-48-48.png' %>",
+			"sizes": "48x48"
+		},
+		{
+			"src": "<%= image_url 'firefox/firefox-general-32-32.png' %>",
+			"sizes": "32x32"
+		},
+		{
+			"src": "<%= image_url 'firefox/firefox-general-16-16.png' %>",
+			"sizes": "16x16"
 		}
 	],
 	"splash_pages": null
