--- a/web/app/components/movies_component.html.erb
+++ b/web/app/components/movies_component.html.erb
@@ -34,12 +34,12 @@
 		<% end %>
 		<div data-controller="hovercard"
 				 data-hovercard-active-value="<%= @hovercard %>"
-				 data-hovercard-position-value="prepend"
 				 data-hovercard-preserve-value="false"
 				 data-hovercard-hide-mouseenter-value="true"
 				 data-hovercard-timer-value="1000"
 				 data-action="mouseleave->hovercard#hide"
 				 class="relative px-1">
+			<div class="relative" data-hovercard-target="card" data-action="mouseenter->hovercard#clearTimer mouseleave->hovercard#hide"></div>
 			<div class="hidden absolute top-0 left-0 z-20 items-center w-2 h-full select-none md:flex bg-x-white-to-transparent">
 				<div data-slider-target="left" data-action="click->slider#left" class="hidden my-auto mt-20 -ml-4 rounded-full shadow-md transition-colors duration-200 cursor-pointer bg-brand-200 hover:bg-brand-600 hover:text-white text-brand-700">
 					<svg xmlns="http://www.w3.org/2000/svg" class="p-2 w-10 h-10 fill-current" viewBox="0 0 20 20" fill="currentColor">
