--- a/web/app/components/main_sidebar/large_event_component.html.erb
+++ b/web/app/components/main_sidebar/large_event_component.html.erb
@@ -28,7 +28,7 @@
 				</div>
 				<div data-main-sidebar--large-event-target="scrollContent" class="overflow-y-scroll overscroll-contain h-full">
 					<div class="relative" style="background-color: <%= helpers.get_image_dominant_color(@event) %>">
-						<img src="<%= @event.image[:feed].try { |image| image.url(public: true) } %>" alt="<%= @event.name %>" class="object-cover object-center h-56 w-full border-b">
+						<img src="<%= @event.image[:original].try { |image| image.url(public: true) } %>" alt="<%= @event.name %>" class="object-cover object-center h-56 w-full border-b">
 					</div>
 					<div class="flex relative z-20 flex-wrap items-center py-2 px-3 -mt-6">
 						<a href="<%= @event.source_url %>" rel="nofollow" target="_blank" class="text-xs c-chip mr-3 mb-3 shadow group hover:shadow-md">
