--- a/web/app/views/events/show.html.erb
+++ b/web/app/views/events/show.html.erb
@@ -183,48 +183,7 @@
 		</div>
 
 		<div class="border-t border-b border-gray-100 md:border-0 py-8 space-y-3">
-			<h2 class="px-5 c-h3">Similares</h2>
-			<div class="md:space-y-2">
-				<% if @similar_events.present? %>
-					<% @similar_events.each do |similar_event| %>
-						<div class="flex justify-start py-3 px-5 md:border-0">
-							<div>
-								<div class="overflow-hidden relative w-16 h-16 rounded">
-									<%= link_to event_path(similar_event),
-															'aria-label': "Ver evento #{similar_event&.name}",
-															data:         {
-																action:     'click->main-sidebar--horizontal-event#openEvent',
-																'event-id': similar_event.id
-															} do %>
-										<%= image_tag shrine_image_url(similar_event, :feed), {
-											loading: :lazy,
-											alt:     similar_event.name,
-											class:   'bg-gray-100 cursor-pointer h-full object-center object-cover w-full overflow-hidden',
-											onerror: "this.style.opacity='0'"
-										} rescue nil %>
-									<% end %>
-								</div>
-							</div>
-							<div class="pl-6">
-								<%= content_tag :a,
-																href:  event_path(similar_event),
-																data:  {
-																	action:     'click->main-sidebar--horizontal-event#openEvent',
-																	url:        event_path(similar_event),
-																	'event-id': similar_event.id
-																},
-																class: 'md:hover:underline inline-block md:text-sm mb-1 leading-snug text-gray-700' do %>
-									<%= similar_event.name %>
-								<% end %>
-							</div>
-						</div>
-					<% end %>
-				<% else %>
-					<div class="px-5 mt-4">
-						Sem eventos similares
-					</div>
-				<% end %>
-			</div>
+			<%= render partial: 'events/similar_events', locals: { event: @event, similar_events: @similar_events, src: similar_event_path, loading: 'lazy' } %>
 		</div>
 
 		<%= link_to category_events_path(@event&.categories_url), class: 'flex p-5 text-gray-800 mt-5 bg-white cursor-pointer inline-block md:hover:bg-brand-100 md:hover:text-brand-600 overflow-hidden rounded-lg space-y-3' do %>
