--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -30,7 +30,9 @@
 	<%= favicon_link_tag 'https://alegreme.sfo2.digitaloceanspaces.com/stable-images/favicon-96x96.png', { sizes: "96x96", type: "image/png" } %>
 	<%= favicon_link_tag 'https://alegreme.sfo2.digitaloceanspaces.com/stable-images/favicon-144x144.png', { sizes: "144x144", type: "image/png" } %>
 
-	<link rel="manifest" href="<%= asset_url 'manifest.json' %>"/>
+	<% if Rails.env.production? %>
+		<link rel="manifest" href="<%= asset_url 'manifest.json' %>"/>
+	<% end %>
 
 	<style>
 		<%= inline_assets('application.css') %>
