--- a/web/app/components/hero/horizontal_event_component.html.erb
+++ b/web/app/components/hero/horizontal_event_component.html.erb
@@ -1,5 +1,5 @@
 <%= content_tag :div, id: dom_id(@event, :hero), class: helpers.class_names('relative mr-1 mt-6 transition-opacity duration-300'), data: { controller: 'hero--horizontal-event', 'hero--horizontal-event-open-in-sidebar': @open_in_sidebar, 'flip-key': dom_id(@event, :hero) } do %>
-	<div data-hero--horizontal-event-target="shadowItem" class="overflow-hidden absolute top-0 right-0 top-3 -right-3 w-32 h-20 rounded-lg opacity-0 transition-all transform bg-gray-200 md:h-28 md:w-48">
+	<div data-hero--horizontal-event-target="shadowItem" class="overflow-hidden absolute top-0 right-0 top-1 -right-1 w-32 h-20 rounded-lg opacity-0 transition-all transform bg-gray-200 md:h-28 md:w-48">
 
 	</div>
 	<div data-hero--horizontal-event-target="currentItem"
@@ -15,7 +15,7 @@
 											class: 'c-h3 inline leading-snug' do %>
 				<%= @event.name %>
 			<% end %>
-			<div class="pl-2 inline text-xs md:text-sm text-gray-700">
+			<div class="inline text-xs md:text-sm text-gray-700">
 				<%= helpers.day_of_week(@event.start_time) %>
 				· <%= @event.multiple_hours? ? '+1 horário' : "#{helpers.format_hour(@event.start_time)}h" %> ·
 				<%= @event&.categories_display_name&.capitalize %> ·
