--- a/web/app/views/layouts/_footer.html.erb
+++ b/web/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<section class="bg-gray-50 flex flex-col font-light md:px-0 md:text-base mt-10 md:mt-5 px-5 py-6 space-y-1 text-center text-gray-600 text-sm w-full pb-24 md:pb-6 <%= "me-footer--#{params[:controller]}" if params[:controller] %>">
+<section class="bg-gray-50 flex flex-col font-light md:px-0 md:text-base mt-10 md:mt-5 px-5 py-6 text-center text-gray-600 text-sm w-full pb-24 md:pb-6 <%= "me-footer--#{params[:controller]}" if params[:controller] %>">
 
 	<a aria-label="Baixar aplicativo para android" class="inline-block mx-auto w-content" href='https://play.google.com/store/apps/details?id=com.alegreme.app&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
 		<img alt='Disponível no Google Play' loading="lazy" width="200" src='https://play.google.com/intl/en_us/badges/static/images/badges/pt-br_badge_web_generic.png'/>
@@ -23,19 +23,19 @@
 	<div class="flex-wrap inline-flex items-center justify-center">
 		Eventos e cinema em Porto Alegre
 	</div>
-	<div class="flex-wrap inline-flex items-center justify-center">
-		<div>
+	<div class="flex-wrap items-center justify-center">
+		<span>
 			Feito
 			<!-- <a href="https://www.instagram.com/jonataseduardo/">@jonataseduardo</a> -->
 			com
 			❤️
 			️no Centro Histórico de Porto Alegre
-		</div>
+		</span>
 		<span class="px-2">·</span>
-		<div class="text-brand-600">
+		<span class="text-brand-600">
 			<a href="https://en.wikipedia.org/wiki/Perpetual_beta" title="release early and release often (even with bugs \o/)" rel="nofollow noreferrer" target="_blank">Always
 				in beta 🤙</a>
-		</div>
+		</span>
 	</div>
 	<!-- <div class="me-footer__vamodale">
 		Ei! Tem ideias de funcionalidades, projetos pra tocar junto, quer conectar uma API, trocar uma ideia... Usa os links acima.
