--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -53,7 +53,7 @@
 	<%= javascript_pack_tag 'application', 'data-turbo-track': 'reload', defer: true %>
 
 </head>
-<body class="antialiased font-display text-gray-600 bg-white md:bg-white tap-highlight-none overflow-x-hidden" data-user-type="<%= current_user ? "logged-user" : "guest-user" %>" data-controller="<%= controller_name %>" data-action="<%= action_name %>">
+<body class="overflow-x-hidden antialiased text-gray-600 bg-white font-display md:bg-white tap-highlight-none" data-user-type="<%= current_user ? "logged-user" : "guest-user" %>" data-controller="<%= controller_name %>" data-action="<%= action_name %>">
 
 <!-- Google Tag Manager (noscript) -->
 <noscript>
@@ -90,6 +90,16 @@
 
 <%= render partial: 'components/bottom-navigation' if mobile_device? %>
 <%= render partial: 'layouts/footer', cached: true %>
+
+<% if current_page?(controller: 'feeds', action: 'index') %>
+	<a href="https://forms.gle/hLgHtwEQGTwjpuDW9" target="_blank" class="md:w-content md:h-auto bg-white border bottom-16 fixed flex h-9 hover:border-brand-600 hover:text-brand-600 items-center md:bottom-5 md:left-5 px-2 py-1 right-3 rounded-full space-x-1.5 text-xs w-9 z-20" title="Envie sugestões de funcionalidades, erros e outras mensagens que desejar.">
+		<svg class="w-5 h-5 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+			<path d="M0 0h24v24H0V0z" fill="none"/>
+			<path d="M20 2H4c-1.1 0-2 .9-2 2v18l4-4h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-8 9c-.55 0-1-.45-1-1V6c0-.55.45-1 1-1s1 .45 1 1v4c0 .55-.45 1-1 1zm1 4h-2v-2h2v2z"/>
+		</svg>
+		<span class="hidden md:inline-block">Feedback, erros e sugestões</span>
+	</a>
+<% end %>
 
 </body>
 </html>
