--- a/web/app/views/events/_group_by_day_list.html.erb
+++ b/web/app/views/events/_group_by_day_list.html.erb
@@ -3,13 +3,7 @@
 		<% events.group_by { |e| e.start_time.to_date }&.each do |group| %>
 			<div id="<%= "main-sidebar--group-#{group[0]}" %>" class="relative pb-6 mb-3 border-b last:border-b-0">
 				<div class="sticky top-14 z-10 flex-1 pt-3 pb-3 pl-1 mb-3 -ml-1 leading-6 text-gray-600 bg-white md:top-16 md:bg-white md:leading-normal md:pb-2">
-					<div class="md:pt-4">
-						<div class="text-xs">
-							<%= l(group[0]&.to_date, format: "%d/%m") %>
-							<% if group[0].to_date > Date.today + 2 %>
-								&nbsp;<%= "· daqui #{distance_of_time_in_words(group[0]&.to_datetime, DateTime.now, false, highest_measure_only: true)}" %>
-							<% end %>
-						</div>
+					<div class="flex space-x-2 items-center md:pt-4">
 						<div class="flex space-x-2 select-none">
 							<div class="flex items-center text-gray-800 uppercase">
 								<%= link_to day_events_path(day: group[0].to_date.strftime("%d-%m-%Y")), class: 'font-display text-sm font-medium', data: { 'turbo-preserve-scroll': true } do %>
@@ -25,6 +19,12 @@
 									<% end %>
 								<% end %>
 							</div>
+						</div>
+						<div class="text-xs">
+							<%= l(group[0]&.to_date, format: "%d/%m") %>
+							<% if group[0].to_date > Date.today + 2 %>
+								&nbsp;<%= "· daqui #{distance_of_time_in_words(group[0]&.to_datetime, DateTime.now, false, highest_measure_only: true)}" %>
+							<% end %>
 						</div>
 					</div>
 				</div>
