--- a/web/app/views/events/_group_by_day_list.html.erb
+++ b/web/app/views/events/_group_by_day_list.html.erb
@@ -6,7 +6,7 @@
 					<div class="flex space-x-2 items-center md:pt-4">
 						<div class="flex space-x-2 select-none">
 							<div class="flex items-center text-gray-800 uppercase">
-								<%= link_to day_events_path(day: group[0].to_date.strftime("%d-%m-%Y")), class: 'font-display text-sm font-medium', data: { 'turbo-preserve-scroll': true } do %>
+								<%= content_tag :div, class: 'font-display text-sm font-medium', data: { 'turbo-preserve-scroll': true } do %>
 									<% if group[0].to_date.today? %>
 										Hoje, <%= I18n.l(group[0]&.to_date, format: :week).titlecase %>
 									<% elsif group[0].to_date == Date.tomorrow %>
